# aios-documentation-sandbox

./: .buildinfo  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: dir_CatCutifier.doctree  file_CatCutifier_CatCutifier.cpp.doctree  file_CatCutifier_CatCutifier.h.doctree  library_root.doctree  program_listing_file_CatCutifier_CatCutifier.cpp.doctree  program_listing_file_CatCutifier_CatCutifier.h.doctree  structcat.doctree  unabridged_orphan.doctree
.github/workflows/: documentation.yml
CatCutifier/: CMakeLists.txt  CatCutifier.h
_sources/: index.rst.txt
_sources/api/: dir_CatCutifier.rst.txt  file_CatCutifier_CatCutifier.cpp.rst.txt  file_CatCutifier_CatCutifier.h.rst.txt  program_listing_file_CatCutifier_CatCutifier.cpp.rst.txt  program_listing_file_CatCutifier_CatCutifier.h.rst.txt  structcat.rst.txt  unabridged_orphan.rst.txt
api/: dir_CatCutifier.html  file_CatCutifier_CatCutifier.cpp.html  file_CatCutifier_CatCutifier.h.html  library_root.html  program_listing_file_CatCutifier_CatCutifier.cpp.html  program_listing_file_CatCutifier_CatCutifier.h.html  structcat.html  unabridged_orphan.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
src/: CMakeLists.txt  main.cpp  ontology.cpp  ontology.h
